# Lead-Scraper

./: .coveragerc  .env  .env.example  .env.production.example  .env.staging.example  .env.test  .gitattributes  .gitignore  .implementation-summary.md  .pre-commit-config.yaml  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENV_SETUP.md  LICENSE  Makefile  PROGRESS_SUMMARY.md  README.md  TESTING_GUIDE.md  TODO.md  create_admin_user.py  create_migration.py  create_test_db.py  debug_all_sources.py  debug_html.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  example_scrape.py  fix_async_tests.py  fix_files_lf.py  fix_in_wsl.sh  fix_line_endings.py  fix_specific_files.sh  format_for_ci.py  migrate_test_db.py  nginx.prod.conf  nginx.staging.conf  pyproject.toml  (+27 more)
.github/: TEST_PR.md
.github/workflows/: README.md  auto-format.yml  ci.yml  code-quality.yml  deploy.yml  lint.yml  openapi-validation.yml  performance.yml  rollback.yml  security.yml  staging.yml  tests.yml
alembic/: env.py
alembic/versions/: 2025_10_17_1358-e65490fa834a_initial_schema.py  2025_10_17_1757-bdb54e5d9d8e_add_users_table.py  2025_10_18_1836-d5a50d72e841_add_performance_indexes.py  add_fulltext_search_index.py
app/: main.py
app/api/: auth.py  auth_schemas.py  bulk.py  companies.py  deduplication.py  duplicates.py  export.py  health.py  schemas.py  scoring.py  scraping.py  webhooks.py
app/core/: config.py  dependencies.py  secrets_manager.py  security.py  sentry.py
app/database/: database.py  models.py
app/middleware/: __init__.py  logging_middleware.py  metrics_middleware.py  sentry_middleware.py
app/processors/: deduplicator.py  normalizer.py  validator.py
app/scrapers/: __init__.py  base.py  das_oertliche.py  eleven_eighty.py  eleven_eighty_detail.py  gelbe_seiten.py  goyellow.py  handelsregister.py  unternehmensverzeichnis.py
app/utils/: ai_web_scraper.py  browser_manager.py  cache.py  crawl4ai_scraper.py  deduplicator.py  email_verifier.py  google_places.py  google_search.py  lead_scorer.py  log_helpers.py  logger.py  metrics.py  model_selector.py  notifications.py  phone_verifier.py  proxy_manager.py  rate_limiter.py  smart_scraper.py  structured_logger.py  webhook_delivery.py  webhook_helpers.py  website_scraper.py
app/workers/: backup_worker.py  queue.py  scheduled_jobs.py  scraping_worker.py
data/: correct_url_output.html  debug_11880.html  debug_das_örtliche.html  debug_gelbe_seiten.html  debug_goyellow.html  detail_advanced.html  detail_page.html  gelbe_seiten_debug.html  playwright_output.html
data/benchmarks/: .gitkeep  test_cases.json
data/exports/: 11880_Stuttgart_IT-Service.json  11880_Stuttgart_IT-Service_basic.json  gelbe_seiten_Stuttgart_IT-Service.json  villingen_schwenningen_complete.json
data/load_tests/: .gitkeep
data/prompts/: .gitkeep  optimized_prompts.json
docs/: AI-SCRAPING.md  ALERTING.md  API-VERSIONING.md  API.md  AUTHENTICATION.md  BACKUP.md  CI-CD.md  CODE_QUALITY.md  DEPLOYMENT.md  DUPLICATE-DETECTION.md  LOGGING.md  MONITORING.md  MYPY_BACKLOG.md  PERFORMANCE.md  PRODUCTION.md  SENTRY.md  TESTING.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
monitoring/alertmanager/: alertmanager.prod.yml  alertmanager.yml
monitoring/prometheus/: prometheus.prod.yml  prometheus.yml
nginx/: README.md  upstream-blue.conf  upstream-green.conf
project instructions/: projectplan.md
scripts/: README.md  check_fts_index.py  collect_webhook_calls.py  debug_last_job.py  init_db.py  parse_gelbe_fixture.py  run_coverage.sh  run_integration_tests.sh  scrape_complete_pipeline.py  setup_ollama.sh  start_worker.ps1  start_worker.sh  verify_indexes.py
scripts/benchmarks/: README.md  benchmark_ollama_models.py  generate_test_cases.py  optimize_prompts.py
scripts/deployment/: README.md  deploy.sh  health_check.sh  rollback.sh
scripts/examples/: debug_all_sources.py  (+16 more)
tests/: conftest.py  test_bulk_api.py  test_export_api.py  test_scoring_api.py  test_webhooks_api.py
(+97 files in other folders)
